--- a/styles/header.css
+++ b/styles/header.css
@@ -2,5 +2,29 @@
     width: 24px;
     height: 24px;
     background-image: url("../assets/icons/menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
+
+.navbar{
+    background-color: var(--white);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+}
+
+.container-image{
+    height: 32px;
+    padding: 1rem;
+}
+
+.container-image.icon{
+    height: 45px;
+}
+
