--- a/global.css
+++ b/global.css
@@ -3,10 +3,14 @@
 :root {
     --background: #EBECEE;
     --white: #FFFFFF;
+    --main-font: "Poppins";
 }
 
 body{
     background-color: var(--background);   
+    font-family: var(--main-font);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 h1{
