--- a/styles/header.css
+++ b/styles/header.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container{
@@ -28,3 +29,26 @@
     height: 45px;
 }
 
+.menu-list {
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: var(--white);
+    width: 60vw;
+
+}
+
+/* When is checked, after ~ is changed */
+.button-container:checked ~ .menu-list {
+    display: block;
+}
+
+.menu-list-item {
+    padding: 1em;
+    text-decoration: none;
+}
+
+.menu-list-item a {
+    color: black;
+    text-decoration: none;
+}
